src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__compute_linear_combination(value input, value coefficients);
value atg__compute_linear_combination_out(value out, value input, value coefficients);
value atg__conj(value self);
value atg__conj_copy(value self);
value atg__conj_copy_out(value out, value self);
value atg__conj_physical(value self);
value atg__conj_physical_out(value out, value self);
value atg__conv_depthwise2d(value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg__conv_depthwise2d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg__convert_indices_from_coo_to_csr(value self, int64_t size, int out_int32);
value atg__convert_indices_from_coo_to_csr_out(value out, value self, int64_t size, int out_int32);
value atg__convert_indices_from_csr_to_coo(value crow_indices, value col_indices, int out_int32, int transpose);
value atg__convert_indices_from_csr_to_coo_out(value out, value crow_indices, value col_indices, int out_int32, int transpose);
value atg__convert_weight_to_int4pack(value self, int64_t innerKTiles);
value atg__convert_weight_to_int4pack_for_cpu(value self, int64_t innerKTiles);
value atg__convolution(value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups, int benchmark, int deterministic, int cudnn_enabled, int allow_tf32);
value atg__convolution_deprecated(value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups, int benchmark, int deterministic, int cudnn_enabled);
value atg__convolution_mode(value input, value weight, value bias, value stride, const char * padding, value dilation, int64_t groups);
value atg__convolution_out(value out, value input, value weight, value bias, value stride, value padding, value dilation, int transposed, value output_padding, int64_t groups, int benchmark, int deterministic, int cudnn_enabled, int allow_tf32);
value atg__copy_from(value self, value dst, int non_blocking);
value atg__copy_from_and_resize(value self, value dst);
value atg__copy_from_and_resize_out(value out, value self, value dst);
value atg__copy_from_out(value out, value self, value dst, int non_blocking);
value atg__cslt_compress(value input);
value atg__cslt_sparse_mm(value compressed_A, value dense_B, value bias, value alpha, int out_dtype, int transpose_result, int64_t alg_id, int64_t split_k, int split_k_one_kernel);
value atg__cslt_sparse_mm_search(value compressed_A, value dense_B, value bias, value alpha, int out_dtype, int transpose_result);
value atg__ctc_loss(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int zero_infinity);
value atg__ctc_loss_backward(value grad, value log_probs, value targets, value input_lengths, value target_lengths, value neg_log_likelihood, value log_alpha, int64_t blank, int zero_infinity);
value atg__ctc_loss_backward_out(value out, value grad, value log_probs, value targets, value input_lengths, value target_lengths, value neg_log_likelihood, value log_alpha, int64_t blank, int zero_infinity);
value atg__ctc_loss_backward_tensor(value grad, value log_probs, value targets, value input_lengths, value target_lengths, value neg_log_likelihood, value log_alpha, int64_t blank, int zero_infinity);
value atg__ctc_loss_out(value out0, value out1, value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int zero_infinity);
value atg__ctc_loss_tensor(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int zero_infinity);
value atg__ctc_loss_tensor_out(value out0, value out1, value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int zero_infinity);
value atg__cudnn_ctc_loss(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int deterministic, int zero_infinity);
value atg__cudnn_ctc_loss_out(value out0, value out1, value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int deterministic, int zero_infinity);
value atg__cudnn_ctc_loss_tensor(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int deterministic, int zero_infinity);
value atg__cudnn_init_dropout_state(double dropout, int train, int64_t dropout_seed, int options_kind, int options_device);
value atg__cudnn_init_dropout_state_out(value out, double dropout, int train, int64_t dropout_seed);
value atg__cudnn_rnn(value input, value weight, int64_t weight_stride0, value weight_buf, value hx, value cx, int64_t mode, int64_t hidden_size, int64_t proj_size, int64_t num_layers, int batch_first, double dropout, int train, int bidirectional, value batch_sizes, value dropout_state);
value atg__cudnn_rnn_flatten_weight(value weight_arr, int64_t weight_stride0, int64_t input_size, int64_t mode, int64_t hidden_size, int64_t proj_size, int64_t num_layers, int batch_first, int bidirectional);
value atg__cudnn_rnn_flatten_weight_out(value out, value weight_arr, int64_t weight_stride0, int64_t input_size, int64_t mode, int64_t hidden_size, int64_t proj_size, int64_t num_layers, int batch_first, int bidirectional);
value atg__cudnn_rnn_out(value out0, value out1, value out2, value out3, value out4, value input, value weight, int64_t weight_stride0, value weight_buf, value hx, value cx, int64_t mode, int64_t hidden_size, int64_t proj_size, int64_t num_layers, int batch_first, double dropout, int train, int bidirectional, value batch_sizes, value dropout_state);
value atg__debug_has_internal_overlap(value self);
value atg__dim_arange(value like, int64_t dim);
value atg__dimi(value self);
value atg__dimv(value self);
value atg__dirichlet_grad(value x, value alpha, value total);
value atg__dirichlet_grad_out(value out, value x, value alpha, value total);
value atg__dyn_quant_matmul_4bit(value inp, value packed_weights, int64_t block_size, int64_t in_features, int64_t out_features);
value atg__dyn_quant_pack_4bit_weight(value weights, value scales_zeros, value bias, int64_t block_size, int64_t in_features, int64_t out_features);