src/bindings/torch_bindings_generated0.ml


  let stubs__compute_linear_combination =
    foreign
      "atg__compute_linear_combination"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__compute_linear_combination_out =
    foreign
      "atg__compute_linear_combination_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__conj = foreign "atg__conj" (gc_tensor @-> returning raw_tensor)
  let stubs__conj_copy = foreign "atg__conj_copy" (gc_tensor @-> returning raw_tensor)

  let stubs__conj_copy_out =
    foreign "atg__conj_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__conj_physical =
    foreign "atg__conj_physical" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__conj_physical_out =
    foreign "atg__conj_physical_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__conv_depthwise2d =
    foreign
      "atg__conv_depthwise2d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__conv_depthwise2d_out =
    foreign
      "atg__conv_depthwise2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__convert_indices_from_coo_to_csr =
    foreign
      "atg__convert_indices_from_coo_to_csr"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__convert_indices_from_coo_to_csr_out =
    foreign
      "atg__convert_indices_from_coo_to_csr_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__convert_indices_from_csr_to_coo =
    foreign
      "atg__convert_indices_from_csr_to_coo"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__convert_indices_from_csr_to_coo_out =
    foreign
      "atg__convert_indices_from_csr_to_coo_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__convert_weight_to_int4pack =
    foreign
      "atg__convert_weight_to_int4pack"
      (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__convert_weight_to_int4pack_for_cpu =
    foreign
      "atg__convert_weight_to_int4pack_for_cpu"
      (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__convolution =
    foreign
      "atg__convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__convolution_deprecated =
    foreign
      "atg__convolution_deprecated"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__convolution_mode =
    foreign
      "atg__convolution_mode"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> string
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__convolution_out =
    foreign
      "atg__convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__copy_from =
    foreign "atg__copy_from" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__copy_from_and_resize =
    foreign "atg__copy_from_and_resize" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__copy_from_and_resize_out =
    foreign
      "atg__copy_from_and_resize_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__copy_from_out =
    foreign
      "atg__copy_from_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cslt_compress =
    foreign "atg__cslt_compress" (gc_tensor @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs__cslt_sparse_mm =
    foreign
      "atg__cslt_sparse_mm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__cslt_sparse_mm_search =
    foreign
      "atg__cslt_sparse_mm_search"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning int64_t)
  ;;

  let stubs__ctc_loss =
    foreign
      "atg__ctc_loss"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__ctc_loss_backward =
    foreign
      "atg__ctc_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__ctc_loss_backward_out =
    foreign
      "atg__ctc_loss_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__ctc_loss_backward_tensor =
    foreign
      "atg__ctc_loss_backward_tensor"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__ctc_loss_out =
    foreign
      "atg__ctc_loss_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__ctc_loss_tensor =
    foreign
      "atg__ctc_loss_tensor"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__ctc_loss_tensor_out =
    foreign
      "atg__ctc_loss_tensor_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__cudnn_ctc_loss =
    foreign
      "atg__cudnn_ctc_loss"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__cudnn_ctc_loss_out =
    foreign
      "atg__cudnn_ctc_loss_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__cudnn_ctc_loss_tensor =
    foreign
      "atg__cudnn_ctc_loss_tensor"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__cudnn_init_dropout_state =
    foreign
      "atg__cudnn_init_dropout_state"
      (double @-> int @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__cudnn_init_dropout_state_out =
    foreign
      "atg__cudnn_init_dropout_state_out"
      (gc_tensor @-> double @-> int @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__cudnn_rnn =
    foreign
      "atg__cudnn_rnn"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> double
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__cudnn_rnn_flatten_weight =
    foreign
      "atg__cudnn_rnn_flatten_weight"
      (ptr gc_tensor
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__cudnn_rnn_flatten_weight_out =
    foreign
      "atg__cudnn_rnn_flatten_weight_out"
      (gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__cudnn_rnn_out =
    foreign
      "atg__cudnn_rnn_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> double
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__debug_has_internal_overlap =
    foreign "atg__debug_has_internal_overlap" (gc_tensor @-> returning int64_t)
  ;;

  let stubs__dim_arange =
    foreign "atg__dim_arange" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__dimi = foreign "atg__dimi" (gc_tensor @-> returning int64_t)
  let stubs__dimv = foreign "atg__dimv" (gc_tensor @-> returning int64_t)

  let stubs__dirichlet_grad =
    foreign
      "atg__dirichlet_grad"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__dirichlet_grad_out =
    foreign
      "atg__dirichlet_grad_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__dyn_quant_matmul_4bit =
    foreign
      "atg__dyn_quant_matmul_4bit"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__dyn_quant_pack_4bit_weight =
    foreign
      "atg__dyn_quant_pack_4bit_weight"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;
